fix: clear absolute positions and and use overflow hidden and grid-row-end set to span 1 for short pictures and 2 for tall pictures

--- a/HW8_Q05/css/style.css
+++ b/HW8_Q05/css/style.css
@@ -9,12 +9,12 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 body {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
 
@@ -22,30 +22,26 @@ body {
   width: 60%;
   height: 60%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: min-content;
-  gap: 1rem;
-  position: relative;
+  grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
+  grid-auto-rows: 150px;
+  align-tracks: start;
+  gap: 0.5rem;
+  margin: 4rem 0;
+  /* position: relative; */
 }
 
 .main img {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
-.grid-elem-5 {
-  position: relative;
-  top: -14rem;
+.main .item {
+  overflow: hidden;
 }
-.grid-elem-6 {
-  position: relative;
-  top: -0.7rem;
+
+.main .short {
+  grid-row-end: span 1;
 }
-.grid-elem-7 {
-  position: relative;
-  top: -14.9rem;
-}
-.grid-elem-8 {
-  position: relative;
-  top: -0.7rem;
+.main .tall {
+  grid-row-end: span 2;
 }
